Fixed mobile control overlap

--- a/css/player/controls.sass
+++ b/css/player/controls.sass
@@ -47,7 +47,7 @@
 
 .controls
   // TODO: Clean this up
-  padding: 30px
+  padding: 2vw
 
   .row:first-child
     align-items: flex-start
@@ -96,6 +96,9 @@
 
       &:last-child
         flex: 1 1 auto
+
+      .col
+        justify-content: space-around
 
     .col.mid
         order: -1
